--- a/css/ie-legacy.css
+++ b/css/ie-legacy.css
@@ -7,3 +7,5 @@
 	.eze .eze-smallmodal .arrow { color: #555!important;}
 
 .eze .eze-comments li .add-comment .btn { top: 1px!important; }
+
+.eze #eze-toolbar ul li .quick-action {background: #1e1e1e}
