--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -30,7 +30,7 @@
 					margin: 0 30px 0 0
 					height: 26px
 					overflow: hidden
-					font: normal 12px/26px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+					line-height: 26px
 
 				small
 					font-size: 11px
@@ -41,14 +41,17 @@
 				img
 					margin: -1px 3px 0 0
 
+				input[type="checkbox"]
+					margin: 0 3px
+
 				.btn
 					position: absolute
 					top: 50%
-					margin-top: -11px
-					right: 5px
+					margin-top: -12px
+					right: 2px
 
 					&.edit-btn
-						right: 34px
+						right: 28px
 
 
 
@@ -103,6 +106,7 @@
 				width: 34px
 				border-radius: 34px
 				float: left
+				margin-left: -3px
 			p
 				margin: 0 0 0 40px
 				font: normal 12px/18px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -130,4 +134,4 @@
 					margin: 0 0 0 0
 					font: normal 11px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 					height: 12px
-					width: 100%
+					width: 99%
