--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -57,12 +57,6 @@
 			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 			margin: 0 0 10px 0
 
-			i
-				margin: 0 5px 0 0
-
-			img
-				margin: -4px 0 0 0
-
 		h2
 			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 			margin: 0 0 10px 0
@@ -98,8 +92,10 @@
 		label.checkbox
 			margin: 0 0 10px 0
 
-		li i
-			float: right
+		.eze-items
+			li .wrap i
+				float: right
+				margin: 6px 0 0 0
 
 
 
@@ -120,14 +116,22 @@
 
 		.table
 			margin: 0
+
 			tr:first-child td
 				border-top: 0
 
+			td
+				padding: 8px 8px 8px 0
+
 			p
-				margin: 0
+				margin: 4px 0 0 0
 
 			label
 				margin: 4px 0 0 0
+
+
+	.eze-settings-modal
+		width: 580px
 
 
 
