--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -36,6 +36,14 @@
 		clear: both
 		cursor: pointer
 
+	.collapse
+		.eze-object-attribute
+			display: none
+
+		&.in
+			.eze-object-attribute
+				display: block
+
 
 	.eze-object-attributes
 		position: absolute
@@ -158,6 +166,7 @@
 
 			p
 				float: right
+				margin: -27px 0 0 0
 
 				.btn
 					float: right
