--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -26,7 +26,7 @@
 			max-width: 1100px
 
 			h1
-				float: left
+				display: inline
 				font: normal 12px/32px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 				margin: 0
 
@@ -69,15 +69,21 @@
 			-webkit-animation: stack-header-move-out 0.7s ease 1 normal
 
 		#autosave
+			height: 20px
 			float: right
-			margin: 0 20px 0 0
+			margin: 2px 20px 0 0
+			padding: 0 0 0 35px
 			font: normal 12px/44px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+			position: relative
 
 			img
 				background: #fff
 				border-radius: 25px
 				padding: 4px
 				margin: 9px 16px 0 0
+				position: absolute
+				top: 0
+				left: 0
 
 		// Stack content
 
