--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -141,7 +141,7 @@
 
 
 	.eze-layout-modal
-		width: 580px
+		width: 635px
 
 		.active-layout
 			border: 3px solid orange
@@ -163,7 +163,7 @@
 					line-height: 36px
 
 					p
-						width: 320px
+						width: 300px
 						height: 36px
 						float: left
 						margin: 0
@@ -171,14 +171,16 @@
 						white-space: nowrap
 						font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 
+						input
+							width: 100px
+
 				.name
 					width: 150px
 					margin: 0 10px 0 0
 
 				select, .chzn-container
-					width: 140px
-					float: right
-					margin: 5px 80px 0 0
+					width: 110px
+					margin: 5px 5px 0 0
 
 			.add-new
 				margin: 0
