--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -66,17 +66,14 @@
 		.eze-object-attribute // One attribute
 			width: 49%
 			float: left
-			position: relative
 			-moz-box-sizing: border-box
 			box-sizing: border-box
 			padding: 15px
 			border-left: 1px solid #eee
-			-webkit-transform: translateZ(0)
 
 			.label-required
-				position: absolute
-				top: 5px
-				right: 5px
+				float: right
+				margin: -10px
 
 			&.full-width
 				border-top: 1px solid #eee
